[package]
name = "oled-test"
version = "0.1.0"
authors = ["nebelgrau"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
ssd1306 = "0.2.6"


#access to HAL 
stm32f0xx-hal = {version = "0.15.2", features = ["stm32f030xc"]}

[profile.release]
debug = true
lto = true
opt-level = "z"
